--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 [flake8]
 ignore =
     W503,
-    F811
 exclude =
     tests/,
     */migrations/,
@@ -10,3 +9,4 @@ exclude =
 per-file-ignores =
     */settings.py:E501
 max-complexity = 10
+max_line_length = 79
